--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -7,15 +7,27 @@
     <style>
         body {
             height: 100vh;
-            background-color: black;
+           /* background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center top;
             background-repeat: no-repeat;
+            
+            background-attachment: fixed;*/
+
+            /*
+            ordem do background : color > image > position > repeat > [size] > attachment
+            */
             background-size: cover;
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat  fixed;
         }
+            /*
+            ordem do background : color > image > position > repeat > [size] > attachment
+            */
+            
+
         main {
            background-color: white;
-           width: 400px;
+           max-width: 400px;
            padding: 10px;
            margin: auto;
            border: 1px solid darkblue;
